# teleporta

./: .gitignore  Cargo.toml  docker-compose.yml
bot/: Cargo.toml
bot/src/: main.rs
esp/: Cargo.toml  sdkconfig.defaults
esp/.cargo/: config.toml
esp/src/: main.rs  provisioning.rs  sensor.rs  servo.rs
