[package]
name = "esp"
version = "0.1.0"
authors = ["outragedline <outragedline@proton.me>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "esp"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true  # Symbols are nice and they don't increase the size on Flash
opt-level = 0

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = [
	"critical-section",
	"embassy-time-driver",
	"embassy-sync",
	"experimental",
	"alloc",
] }
embedded-svc = "0.28.1"
esp-idf-sys = "0.36.1"
esp-idf-hal = "0.45.2"
anyhow = "1.0.98"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
embuild = "0.33"

[patch.crates-io]
esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc" }
cc = { git = "https://github.com/rust-lang/cc-rs" }
